[GLOB-73] fixed collapse on obs table

--- a/global_finprint/static/sass/project.scss
+++ b/global_finprint/static/sass/project.scss
@@ -200,6 +200,7 @@ a.manual-assign {
     }
 
     tr.child-row {
+      display: none;
       background-color: $child-row;
     }
 
